Cleanup CXF files to simplify further upgrade